gccida/g2/init_reg_sets
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_reg_sets/src/regclass.c:775:12: error: expected expression
*( _OWORD *)global_regs = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_reg_sets/src/regclass.c:775:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)global_regs = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_reg_sets/src/regclass.c:776:12: error: expected expression
*( _OWORD *)&global_regs[16] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_reg_sets/src/regclass.c:776:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&global_regs[16] = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_reg_sets/src/regclass.c:777:12: error: expected expression
*( _OWORD *)&global_regs[32] = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_reg_sets/src/regclass.c:777:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&global_regs[32] = 0LL; 
   ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/init_reg_sets/src/obj/regclass.o] Error 1
